{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 1523,
  "lineage": "a1705088-948e-35ee-9a77-1333fffad4aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057fa969604d54589",
            "arn": "arn:aws:ec2:us-east-2:920373027066:elastic-ip/eipalloc-057fa969604d54589",
            "association_id": "eipassoc-092f6f3266d7d6451",
            "domain": "vpc",
            "id": "eipalloc-057fa969604d54589",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a057a302a2c6f917",
            "private_dns": "ip-192-168-0-198.us-east-2.compute.internal",
            "private_ip": "192.168.0.198",
            "public_dns": "ec2-3-14-172-55.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.172.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0beec480a7f7b83f7",
            "arn": "arn:aws:ec2:us-east-2:920373027066:elastic-ip/eipalloc-0beec480a7f7b83f7",
            "association_id": "eipassoc-0cdb5b1f9a296f254",
            "domain": "vpc",
            "id": "eipalloc-0beec480a7f7b83f7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b9572ad4b9fada18",
            "private_dns": "ip-192-168-1-180.us-east-2.compute.internal",
            "private_ip": "192.168.1.180",
            "public_dns": "ec2-3-14-187-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.187.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:internet-gateway/igw-0aae7bf965e1ba3c5",
            "id": "igw-0aae7bf965e1ba3c5",
            "owner_id": "920373027066",
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:920373027066:loadbalancer/app/serverless-jenkins-on-ecs/334e1564be7e4451",
            "arn_suffix": "app/serverless-jenkins-on-ecs/334e1564be7e4451",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "serverless-jenkins-on-ecs-250980937.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:920373027066:loadbalancer/app/serverless-jenkins-on-ecs/334e1564be7e4451",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "serverless-jenkins-on-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e7b92dc4d0d6c041"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dff10a40afeb930"
              },
              {
                "subnet_id": "subnet-0a912a008bab58f67"
              }
            ],
            "subnets": [
              "subnet-01dff10a40afeb930",
              "subnet-0a912a008bab58f67"
            ],
            "vpc_id": "vpc-0588083ead38565f9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:920373027066:listener/app/serverless-jenkins-on-ecs/334e1564be7e4451/61b160656dad0a83",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:920373027066:targetgroup/serverless-jenkins-on-ecs/ada0908d953a6188",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:920373027066:listener/app/serverless-jenkins-on-ecs/334e1564be7e4451/61b160656dad0a83",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:920373027066:loadbalancer/app/serverless-jenkins-on-ecs/334e1564be7e4451",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:920373027066:targetgroup/serverless-jenkins-on-ecs/ada0908d953a6188",
            "arn_suffix": "targetgroup/serverless-jenkins-on-ecs/ada0908d953a6188",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:920373027066:targetgroup/serverless-jenkins-on-ecs/ada0908d953a6188",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:920373027066:loadbalancer/app/serverless-jenkins-on-ecs/98c134f861767d87"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "serverless-jenkins-on-ecs",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057fa969604d54589",
            "association_id": "eipassoc-092f6f3266d7d6451",
            "connectivity_type": "public",
            "id": "nat-0eb8a1312ca541f52",
            "network_interface_id": "eni-0a057a302a2c6f917",
            "private_ip": "192.168.0.198",
            "public_ip": "3.14.172.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a912a008bab58f67",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0beec480a7f7b83f7",
            "association_id": "eipassoc-0cdb5b1f9a296f254",
            "connectivity_type": "public",
            "id": "nat-005168928e75c0dbc",
            "network_interface_id": "eni-0b9572ad4b9fada18",
            "private_ip": "192.168.1.180",
            "public_ip": "3.14.187.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01dff10a40afeb930",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b0d7570934ceb98f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eb8a1312ca541f52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0d7570934ceb98f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d83a75f0005337ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-005168928e75c0dbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d83a75f0005337ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aae7bf965e1ba3c5",
            "id": "r-rtb-006892ebe959e1f791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006892ebe959e1f79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:route-table/rtb-0b0d7570934ceb98f",
            "id": "rtb-0b0d7570934ceb98f",
            "owner_id": "920373027066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb8a1312ca541f52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:route-table/rtb-0d83a75f0005337ae",
            "id": "rtb-0d83a75f0005337ae",
            "owner_id": "920373027066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005168928e75c0dbc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:route-table/rtb-006892ebe959e1f79",
            "id": "rtb-006892ebe959e1f79",
            "owner_id": "920373027066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aae7bf965e1ba3c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0881c560aa56258d7",
            "route_table_id": "rtb-0b0d7570934ceb98f",
            "subnet_id": "subnet-06a71817a91cfdb00"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ef2f871a52f41ad",
            "route_table_id": "rtb-0d83a75f0005337ae",
            "subnet_id": "subnet-019a2fa45da8850c5"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d77c5395d61d6e4",
            "route_table_id": "rtb-006892ebe959e1f79",
            "subnet_id": "subnet-0a912a008bab58f67"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9f9b1ee7fabeaa",
            "route_table_id": "rtb-006892ebe959e1f79",
            "subnet_id": "subnet-01dff10a40afeb930"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:security-group/sg-0e7b92dc4d0d6c041",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053bbf8c9e0978b64"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0e7b92dc4d0d6c041",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "920373027066",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:security-group/sg-03103e573349f6fbd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-03103e573349f6fbd",
            "ingress": [],
            "name": "ecs-jenkins-agents",
            "name_prefix": "",
            "owner_id": "920373027066",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:security-group/sg-053bbf8c9e0978b64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-053bbf8c9e0978b64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03103e573349f6fbd"
                ],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7b92dc4d0d6c041"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-jenkins-controller",
            "name_prefix": "",
            "owner_id": "920373027066",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:security-group/sg-01e8f27f7fcb62aba",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01e8f27f7fcb62aba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053bbf8c9e0978b64"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "920373027066",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "agent_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2587182636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03103e573349f6fbd",
            "security_group_rule_id": "sgr-0560199c52309506f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-4038660351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053bbf8c9e0978b64",
            "security_group_rule_id": "sgr-0c0303f18a80084c6",
            "self": false,
            "source_security_group_id": "sg-0e7b92dc4d0d6c041",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3481650989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e7b92dc4d0d6c041",
            "security_group_rule_id": "sgr-0e9d3c199537b952d",
            "self": false,
            "source_security_group_id": "sg-053bbf8c9e0978b64",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-1334012706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01e8f27f7fcb62aba",
            "security_group_rule_id": "sgr-0eabd28eb75ca3d1d",
            "self": false,
            "source_security_group_id": "sg-053bbf8c9e0978b64",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_security_group.efs",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2965477879",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e7b92dc4d0d6c041",
            "security_group_rule_id": "sgr-02c2733b455ff27b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_agent_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 50000,
            "id": "sgrule-83319367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053bbf8c9e0978b64",
            "security_group_rule_id": "sgr-0b38056e234ea6fb8",
            "self": false,
            "source_security_group_id": "sg-03103e573349f6fbd",
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3063060535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053bbf8c9e0978b64",
            "security_group_rule_id": "sgr-018ccbec2c8ab0ffc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:subnet/subnet-06a71817a91cfdb00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a71817a91cfdb00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920373027066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2a"
            },
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:subnet/subnet-019a2fa45da8850c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019a2fa45da8850c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920373027066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-2b"
            },
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:subnet/subnet-0a912a008bab58f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a912a008bab58f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920373027066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-2a"
            },
            "tags_all": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-2a"
            },
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:subnet/subnet-01dff10a40afeb930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dff10a40afeb930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920373027066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-2b"
            },
            "tags_all": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-2b"
            },
            "vpc_id": "vpc-0588083ead38565f9"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920373027066:vpc/vpc-0588083ead38565f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01ce15e7ee2f49d9a",
            "default_route_table_id": "rtb-0239332428fb8dd6b",
            "default_security_group_id": "sg-07af90e9968a2d462",
            "dhcp_options_id": "dopt-047fb139912ced345",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0588083ead38565f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0239332428fb8dd6b",
            "owner_id": "920373027066",
            "tags": {
              "Name": "serverless-jenkins-on-ecs"
            },
            "tags_all": {
              "Name": "serverless-jenkins-on-ecs"
            }
          }
        }
      ]
    }
  ]
}